objects/ASI_CRM_Criteria_Threshold__c.object
<CustomObject>
    <description>ASI</description>
    <fields>
        <fullName>ASI_CRM_Condition__c</fullName>
        <label>Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Max_Threshold__c</fullName>
        <label>Max. Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Min_Threshold__c</fullName>
        <label>Min. Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Picklist_Value__c</fullName>
        <label>Picklist Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Criteria_Order__c</fullName>
        <label>Criteria Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Criteria_Set__c</fullName>
        <label>Criteria Set</label>
        <referenceTo>ASI_CRM_Criteria_Set__c</referenceTo>
        <relationshipLabel>Criteria Thresholds</relationshipLabel>
        <relationshipName>ASI_CRM_SG_Criteria_Thresholds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Criteria_Type__c</fullName>
        <formula>ASI_CRM_SG_Criteria_Set__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Criteria Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Question__c</fullName>
        <label>Statement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Weight__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Weight</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Score__c</fullName>
        <label>Score</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Criteria Threshold</label>
    <listViews>
        <fullName>ASI_CRM_TW_Criteria_Thresholds</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Criteria_Set__c</columns>
        <columns>ASI_CRM_SG_Question__c</columns>
        <columns>ASI_CRM_SG_Weight__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Criteria_Threshold__c.ASI_CRM_TW_Currency_Input,ASI_CRM_Criteria_Threshold__c.ASI_CRM_TW_Number_Input,ASI_CRM_Criteria_Threshold__c.ASI_CRM_TW_Picklist,ASI_CRM_Criteria_Threshold__c.ASI_CRM_TW_Text_Input,ASI_CRM_Criteria_Threshold__c.ASI_CRM_TW_Boolean</value>
        </filters>
        <label>TW Criteria Thresholds</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_VN_Criteria_Thresholds</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_SG_Criteria_Set__c</columns>
        <columns>ASI_CRM_SG_Question__c</columns>
        <columns>ASI_CRM_Max_Threshold__c</columns>
        <columns>ASI_CRM_Min_Threshold__c</columns>
        <columns>ASI_CRM_Score__c</columns>
        <columns>ASI_CRM_SG_Sequence__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Criteria_Threshold__c.ASI_CRM_VN_Currency_Input,ASI_CRM_Criteria_Threshold__c.ASI_CRM_VN_Number_Input,ASI_CRM_Criteria_Threshold__c.ASI_CRM_VN_Yes_No</value>
        </filters>
        <label>VN Criteria Thresholds</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Criteria_Set__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_SG_Question__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CT-{0000000000}</displayFormat>
        <label>Criteria Threshold Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Criteria Thresholds</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_SG_Boolean</fullName>
        <active>true</active>
        <label>Yes/No</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Currency_Input</fullName>
        <active>true</active>
        <label>Currency Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Integer_Input</fullName>
        <active>true</active>
        <label>Number Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Picklist</fullName>
        <active>true</active>
        <label>Picklist</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Text_Input</fullName>
        <active>true</active>
        <description>Free text criteria</description>
        <label>Text Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TH_Boolean</fullName>
        <active>true</active>
        <label>TH Yes/No</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TH_Currency_Input</fullName>
        <active>true</active>
        <label>TH Currency Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TH_Integer_Input</fullName>
        <active>true</active>
        <label>TH Integer Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TH_Picklist</fullName>
        <active>true</active>
        <label>TH Picklist</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TH_Text_Input</fullName>
        <active>true</active>
        <label>TH Text Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Boolean</fullName>
        <active>true</active>
        <label>TW Yes/No</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Currency_Input</fullName>
        <active>true</active>
        <label>TW Currency Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Number_Input</fullName>
        <active>true</active>
        <label>TW Number Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Picklist</fullName>
        <active>true</active>
        <label>TW Picklist</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Text_Input</fullName>
        <active>true</active>
        <label>TW Text Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Currency_Input</fullName>
        <active>true</active>
        <label>VN Currency Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Number_Input</fullName>
        <active>true</active>
        <label>VN Number Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Picklist</fullName>
        <active>true</active>
        <label>VN Picklist</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Yes_No</fullName>
        <active>true</active>
        <label>VN Yes/No</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>